--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Shopzone</title>
     <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
-    <script src="fakestore.js"></script>
+    <script src="index.js"></script>
     <style>
         a {
             text-decoration:none;
