--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
     <script src="index.js"></script>
+    <link rel="stylesheet" href="style.css">
     <style>
         a {
             text-decoration:none;
@@ -76,6 +77,7 @@
         <main class="col-10 d-flex flex-wrap overflow-auto" style="height:450px">
 
         </main>
+        
     </section>
 
     <script src="../node_modules/jquery/dist/jquery.js"></script>
